[package]
name = "hyperlane-relayer-blueprint"
version = "0.1.0"
edition = "2021"
description = "A Tangle Blueprint (AVS) for deploying Hyperlane relayers"
authors = ["Webb Technologies Inc."]
license = "MIT OR Apache-2.0"
homepage = "https://tangle.tools"
repository = "https://github.com/tangle-network/hyperlane-relayers-blueprint"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]
rust-version = "1.81"

[dependencies]
tracing = "0.1"
color-eyre = "0.6"
tokio = { version = "1.41", default-features = false, features = ["full"] }
alloy-primitives = "0.7.2"
reqwest = "0.12.9"

[dependencies.gadget-sdk]
path = "../gadget/sdk"
features = ["getrandom"]

[dev-dependencies]
tempfile = "3.10.0"
alloy-provider = "0.6.4"
cargo-tangle = { path = "../gadget/cli" }
blueprint-test-utils = { path = "../gadget/blueprint-test-utils", default-features = false, features = ["std"] }
testcontainers = "0.20.1"
tracing-subscriber = "0.3.18"

[build-dependencies]
blueprint-metadata = { path = "../gadget/blueprint-metadata" }

[package.metadata.blueprint]
manager = { Evm = "HyperlaneBlueprint" }