[package]
name = "hyperlane-relayer-blueprint"
version = "0.1.0"
edition = "2021"
description = "A Tangle Blueprint (AVS) for deploying Hyperlane relayers"
authors = ["Webb Technologies Inc."]
license = "MIT OR Apache-2.0"
homepage = "https://tangle.tools"
repository = "https://github.com/tangle-network/hyperlane-relayers-blueprint"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]
rust-version = "1.81"

[dependencies]
blueprint-sdk = { git = "https://github.com/tangle-network/gadget", features = ["tangle", "evm", "macros", "local-store"] }
dockworker = { git = "https://github.com/tangle-network/dockworker", features = ["docker"] }
color-eyre = "0.6"
reqwest = "0.12.12"

[dev-dependencies]
blueprint-sdk = { git = "https://github.com/tangle-network/gadget", features = ["testing", "tangle", "evm"] }
testcontainers = "0.23.1"

[build-dependencies]
blueprint-sdk = { git = "https://github.com/tangle-network/gadget", features = ["build"] }

[package.metadata.blueprint]
manager = { Evm = "HyperlaneBlueprint" }