[package]
name = "hyperlane-relayer-blueprint-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
blueprint-sdk = { workspace = true, features = ["tangle", "evm", "macros"] }
color-eyre.workspace = true
reqwest.workspace = true
docktopus = { workspace = true, features = ["deploy"] }

[dev-dependencies]
blueprint-sdk = { workspace = true, features = ["testing", "evm"] }
testcontainers.workspace = true

[workspace]
members = ["hyperlane-relayer-bin", "."]

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "A Tangle Blueprint (AVS) for deploying Hyperlane relayers"
authors = ["Webb Technologies Inc."]
license = "MIT OR Apache-2.0"
homepage = "https://tangle.tools"
repository = "https://github.com/tangle-network/hyperlane-relayers-blueprint"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]

[workspace.dependencies]
# Our blueprint
hyperlane-relayer-blueprint-lib = { path = "." }

blueprint-sdk = { version = "0.1.0-alpha.3", features = ["tangle", "evm", "macros", "local-store"] }
docktopus = { version = "0.1.0" }
color-eyre = "0.6"
reqwest = "0.12.12"
testcontainers = "0.23.1"
tokio = "1.44.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
